# rendering-starter-project

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  c_flag_overrides.cmake  format-code.sh
dependencies/: CMakeLists.txt
dependencies/nativefiledialog/: CMakeLists.txt
libs/: CMakeLists.txt  MagnumImgui.cpp  MagnumImgui.hpp
src/: CMakeLists.txt  CompiledConfig.hpp.in  MyApplication.cpp
